# Parallele

./: CMakeLists.txt  README.md
week05/: cl_utils.h  main_ocl.c  main_omp.c  main_seq.c  makefile  utils.h
week3/: CMakeLists.txt  heat_stencil.cl  heat_stencil_ocl.c  heat_stencil_omp.c
week_01/vector_add/: CMakeLists.txt  vec_add_ocl  vec_add_ocl.c  vec_add_omp  vec_add_seq
week_02/matrix_mul/: CMakeLists.txt  benchmark.md  benchmark.result  benchmark.sh  cl_utils.h  compiler_explorer.as  mat_mul.cl  mat_mul_ocl.c  mat_mul_ocl_v2.c  mat_mul_omp.c  mat_mul_seq  mat_mul_seq.c  mat_mul_v2.cl  result.txt  result_core_i5_2520_hdgraphic_3000.txt  result_core_i5_2520_hdgraphic_3000_without_O3.txt  result_core_i7-4720_gtx_960M.txt  result_core_i7_gtx_960M_without_O3.txt  result_ocl.txt  result_omp.txt  run.sh  run_ocl.sh  run_omp.sh
week_03/: heat_stencil.cl  heat_stencil_ocl.c
week_03/unschaugen/: CMakeLists.txt  Readme.txt  heat_stencil.cl  heat_stencil_kopie.c  heat_stencil_locmem.cl  heat_stencil_ocl - Kopie.c  heat_stencil_ocl _ivan.c  heat_stencil_ocl.c  heat_stencil_ocl_locmem.c  heat_stencli_ivan.cl
week_03/unschaugen/ivan/: Makefile
week_05/: CMakeLists.txt  count.cl  main.c  makefile  result.txt  run.sh
week_06/: CMakeLists.txt  auto_level.c  auto_level.cl  cl_utils.h
week_07/: CMakeLists.txt  list_gen.c  list_sort.c  parallelization_plan.txt
week_08/: CMakeLists.txt  Makefile  downsweep.c  downsweep.cl  hillissteele.c  hillissteele.cl  parallelization_plan.txt  utils.h
week_09/: CMakeLists.txt  Makefile  countsort_bench.c  kernel.cl  people.h  sort_par.h  sort_seq.h
week_10/: CMakeLists.txt  Makefile  OMFG_look_at_this_result.md  cl_info.c  cl_utils.h  err_code.h  mat_mul.cl  mat_mul_bench.c  mat_mul_bench_fill_cpu.c  mat_mul_d_a_c.cl  optimizations.md  result_GTX_960M.md  result_fill_cpu_rr15.txt  result_no_cpu_rr15.txt  utils.h
week_12/: CMakeLists.txt  mat_mul.cl  mat_mul_wave.c
